# pgptest

PCPrincipalPGP/: CMakeLists.txt  DeployQt.cmake  README.md  build_internal.sh  build_msys2.bat  build_simple.bat  compile.bat
PCPrincipalPGP/PCPrincipalPGP_Portable/: README.txt
PCPrincipalPGP/include/: ConfigManager.h  ContextMenuHandler.h  EncryptDialog.h  FileOperations.h  GenerateKeyDialog.h  KeyManagerDialog.h  KeyProfile.h  MainWindow.h  MassImportDialog.h  NotepadWidget.h  NotepadWidget.h.bak  PGPManager.h  PasswordDialog.h  ProfileManager.h  QuantumCrypto.h  SecureStorage.h  SetupWizard.h
PCPrincipalPGP/src/: ConfigManager.cpp  ContextMenuHandler.cpp  EncryptDialog.cpp  FileOperations.cpp  GenerateKeyDialog.cpp  KeyManagerDialog.cpp  KeyProfile.cpp  MainWindow.cpp  MassImportDialog.cpp  NotepadWidget.cpp  PGPManager.cpp  PasswordDialog.cpp  ProfileManager.cpp  QuantumCrypto.cpp  SecureStorage.cpp  SetupWizard.cpp  main.cpp
